OSGeo Live GIS Disc
===================

Version: 4.5.0a
===================
[Unreleased]
 * Sync to renamed Natural Earth layers so GpsDrive's Mapnik works
 * Sanitize MS Windows installer names so install to USB stick works

Version: 4.5.0
===================
17 March 2011
 * Icon Fixes
 * Download Corrections
 * Update Documentation and Translation
 * Using cached build folders

Version: 4.5rc3
===================
14 March 2011
 * Fix for iso build
 * Updates to translations
 * Using cached build folders

Version: 4.5rc1
===================
9 March 2011
 * Multiple updated Overview, Quickstart and Translations
 * All Critical tickets fixed
 * Using cached build folders

Version: 4.5beta3
===================
3 March 2011
 * Multiple updated Overview, Quickstart and Translations
 * Fixes to Mapfish, Saga, Zoo, Geomajas, Atlasstyler, QGIS Plugins
 * Using cached build folders.

Version: 4.5beta2
===================
23 February 2011
 * Multiple updated Overview, Quickstart and Translations
 * Fixes to Mapfish, 52North, Rasdaman, and a few other minor edits
 * Retrying build after beta1 failed to get GPG keys for packages

Version: 4.5alpha3
===================
14 February 2011
 * Updated Applications - Geonetwork, Mapfish, OpenLayers
 * Multiple updated Overview, Quickstart and Translations
 * Fixes to Sahana, 52North, Rasdaman

Version: 4.5alpha2
===================
5 February 2011
 * New Applications - Rasdaman, Orfeo, Prune
 * First build with some translations of docs

Version: 4.1.svn
===================
[unreleased]
 * Doc translations
 * Most html now rewritten in reST format
 * Merge duplicate files in ISO (saving >600mb)

Version: 4.0.1
===================
28 August 2010
 * New iso based on hand edits to 4.0rc9
 * List of Corrections http://wiki.osgeo.org/wiki/Live_GIS_Disc/Errata/4.0.0
 * Refreshed the Docs
 * Set Firefox homepage

Version: 4.0rc9
==================
13 August 2010
 * Cut down on space by removing unecessary applications